--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
@@ -103,7 +103,7 @@
 
         .item-result {
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             gap: 225px;
 
             svg {
