--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/selectedUser.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/selectedUser.scss
@@ -26,7 +26,7 @@
         .sub-menu {
             display: flex;
             align-items: center;
-            justify-content: start;
+            justify-content: flex-start;
             padding: 10px;
             gap: 20px;
             cursor: pointer;
