--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/dashboard.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/dashboard.scss
@@ -44,7 +44,7 @@ $flex-center: center;
 
     .items {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         flex-wrap: wrap;
         gap: 50px 20px;
     }
