--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatDetails.scss
@@ -6,7 +6,7 @@
     .filter {
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         gap: 10px;
         margin: 10px 0;
 
@@ -45,7 +45,7 @@
 
     .chart-editor-menu {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         margin: 10px;
     }
 
