--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -151,7 +151,7 @@
     top: 18%;
     right: 11%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 10px 0;
     z-index: 100;
 
