--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communication.scss
@@ -23,7 +23,7 @@
         .menu-item {
             display: flex;
             flex-direction: row;
-            justify-content: start;
+            justify-content: flex-start;
             align-items: center;
             padding: 0 5px;
             width: 175px;
@@ -36,7 +36,7 @@
             &_disabled {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 padding: 0 5px;
                 width: 175px;
