--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -41,7 +41,7 @@
 
             .content {
                 display: flex;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 width: 75%;
             }
@@ -66,7 +66,7 @@
                 &__member {
                     position: relative;
                     display: flex;
-                    justify-content: end;
+                    justify-content: flex-end;
                     z-index: 10;
 
                     svg {
