--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communityMenu.scss
@@ -19,8 +19,8 @@
     &__menu {
         display: flex;
         flex-direction: column;
-        justify-content: start;
-        align-items: start;
+        justify-content: flex-start;
+        align-items: flex-start;
         width: 25%;
         margin: 10px 15px;
         border-radius: 15px;
@@ -67,7 +67,7 @@
 
     .close {
         display: flex;
-        align-items: start;
+        align-items: flex-start;
         padding: 5px;
         margin-top: -20px;
 
