--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/userInformation.scss
@@ -23,7 +23,7 @@
     &__container {
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         border-radius: 20px;
         width: 350px;
 
@@ -38,7 +38,7 @@
     &__menu {
         display: flex;
         flex-direction: row;
-        justify-content: end;
+        justify-content: flex-end;
         width: 100%;
 
         svg {
