--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/mainInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/mainInformation.scss
@@ -85,7 +85,7 @@
 
         &__close {
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             width: 100%;
             margin: -10px;
         }
