--- a/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
@@ -78,7 +78,8 @@ else
         const queryString = window.location.search;
         const queryparams = new URLSearchParams(queryString);
         const redirectUri = queryparams.get("redirectUri");
+        const protocol = `@Model.Protocol`;
 
-        window.location.href = redirectUri;
+        window.location.href = `${protocol}://${redirectUri}`;
     }
 </script>
