Update README file
Update README file

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -17,6 +17,7 @@
         width: 75%;
 
         .open-create-post, .finish-create-post {
+            display: flex;
             gap: 20px;
 
             button {
