--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -8,13 +8,14 @@
     box-shadow: 3px 3px 3px 3px white;
     gap: 5px;
     padding: 15px;
-    overflow-y: scroll;
+    overflow: auto;
 
     &__list {
         width: 100%;
     }
 
     &__content, &__other-content {
+        position: relative;
         display: flex;
         flex-direction: column;
 
