--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -63,6 +63,30 @@
             .community {
                 margin: 10px;
 
+                .private-container, .owner-container {
+                    display: flex;
+                    justify-content: center;
+
+                    .private, .owner {
+                        box-shadow: 1px 1px 1px 1px red;
+                        font-size: 10px;
+                        border-radius: 10px;
+                        padding: 5px 10px;
+                        margin: 10px 0;
+                    }
+
+                    .owner {
+                        box-shadow: 1px 1px 1px 1px green;
+                        font-size: 12px;
+
+                        .special-user__another {
+                            display: flex;
+                            align-items: center;
+                            gap: 10px;
+                        }
+                    }
+                }
+
                 &__member {
                     position: relative;
                     display: flex;
