Add scalable Web UI for mobile devices
Add scalable Web UI for mobile devices

--- a/src/CombatAnalysis.WebApp/ClientApp/src/custom.css
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/custom.css
@@ -10,7 +10,7 @@ a {
 .main {
     position: fixed;
     top: 0;
-    height: 1000px;
+    height: 100%;
     width: 100%;
     background: #0c192c;
     z-index: -1;
@@ -90,8 +90,8 @@ code {
     gap: 20px;
     box-shadow: 2px 2px 2px 2px #3AA6B9;
     border-radius: 20px;
-    padding: 30px;
-    font-size: 17px;
+    padding: 2em;
+    font-size: 1em;
 }
 
 .preview__responsibilities {
