--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -1,7 +1,7 @@
 .chat-messages {
     display: flex;
     flex-direction: column;
-    height: 500px;
+    height: 64vh;
     width: 100%;
     margin: 12px 0px;
     border-radius: 5px;
