--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -1,14 +1,34 @@
-﻿.chats {
+﻿$primary-color: #3AA6B9;
+$secondary-color: #57A6A1;
+$white: white;
+$blue: blue;
+$padding-small: 10px;
+$padding-medium: 20px;
+$padding-large: 25px;
+$border-radius: 10px;
+$box-shadow: 2px 2px 2px 2px;
+$mobile-max-width: 425px;
+
+.chats {
     display: flex;
-    flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 10px;
+    gap: $padding-small;
+    width: 100%;
+    height: 100%;
+
+    &__title {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0 10px;
+    }
 
     &__selected-chat {
         display: flex;
-        gap: 20px;
+        gap: $padding-medium;
         width: 100%;
+        height: 100%;
 
         .messages-container {
             flex-grow: 2;
@@ -18,15 +38,15 @@
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
-                box-shadow: 2px 2px 2px 2px white;
-                border-radius: 10px;
-                padding: 10px 25px;
+                box-shadow: $box-shadow $white;
+                border-radius: $border-radius;
+                padding: $padding-small $padding-large;
                 cursor: default;
 
                 &__content {
                     display: flex;
                     align-items: center;
-                    gap: 10px;
+                    gap: $padding-small;
                 }
 
                 &__call-started {
@@ -42,26 +62,26 @@
                     width: 75px;
 
                     .call_active {
-                        border: 1px solid blue;
-                        padding: 10px;
+                        border: 1px solid $blue;
+                        padding: $padding-small;
                         border-radius: 20px;
-                        box-shadow: 2px 2px 2px 2px blue;
+                        box-shadow: $box-shadow $blue;
                     }
 
                     .call-minimazed {
-                        padding: 10px;
+                        padding: $padding-small;
                         opacity: 0.2;
                         cursor: default;
                     }
                 }
 
                 .name {
-                    margin: 0 20px;
+                    margin: 0 $padding-medium;
                     font-weight: bold;
-                    background: linear-gradient(blue, 1%, #57A6A1);
-                    color: white;
-                    padding: 5px 10px;
-                    border-radius: 10px;
+                    background: linear-gradient($blue, 1%, $secondary-color);
+                    color: $white;
+                    padding: 5px $padding-small;
+                    border-radius: $border-radius;
                 }
             }
 
@@ -79,7 +99,7 @@
     }
 
     .select-chat {
-        margin: 25px;
+        margin: $padding-large;
         font-size: 20px;
         text-align: center;
     }
@@ -87,13 +107,10 @@
     &__my-chats {
         width: 30%;
 
-
         &_title {
             display: flex;
             align-items: center;
             justify-content: space-around;
-            min-width: 200px;
-            margin: 10px 0;
 
             .main-content {
                 display: flex;
@@ -132,7 +149,7 @@
 
                 &_active {
                     .selected {
-                        box-shadow: 2px 2px 2px 2px white;
+                        box-shadow: $box-shadow $white;
                     }
 
                     .last-message {
@@ -151,11 +168,11 @@
                         .chat-tooltip {
                             display: flex;
                             align-items: center;
-                            gap: 10px;
+                            gap: $padding-small;
 
                             .unread-message-count {
                                 padding: 5px;
-                                box-shadow: 2px 2px 2px 2px #3AA6B9;
+                                box-shadow: $box-shadow $primary-color;
                                 border-radius: 25px;
                                 font-size: 10px;
                                 width: 25px;
@@ -167,18 +184,15 @@
             }
         }
 
-        .group-chats, .personal-chats {
-        }
-
         li {
             cursor: pointer;
-            margin: 10px;
-            padding: 10px;
-            box-shadow: 4px 4px #3AA6B9;
-            border: 1px solid #3AA6B9;
+            margin: $padding-small;
+            padding: $padding-small;
+            box-shadow: 4px 4px $primary-color;
+            border: 1px solid $primary-color;
             overflow-x: hidden;
-            margin-left: 10px;
-            border-radius: 10px;
+            margin-left: $padding-small;
+            border-radius: $border-radius;
 
             .username {
                 font-weight: bold;
@@ -190,4 +204,19 @@
 .chats-empty {
     width: 300px;
     opacity: 0.5;
+}
+
+@media (max-width: $mobile-max-width) {
+    .chats {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: $padding-small;
+
+        &__my-chats {
+            order: 2;
+            width: 100%
+        }
+    }
 }
