--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -1,10 +1,15 @@
 .selected-community {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row !important;
+    align-items: flex-start !important;
     gap: 20px;
 
     &__content {
         width: 100%;
+
+        .posts {
+            margin: 5px 0;
+        }
 
         .header {
             display: flex;
@@ -107,6 +112,8 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+        padding: 0;
+        margin: 10px;
 
         .members {
             display: flex;
