--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
@@ -1,6 +1,7 @@
 .profile {
     margin: 10px 0;
-    width: 450px;
+    margin-bottom: 15vh;
+    width: 40vw;
 
     .privacy, .general {
         margin-left: 25px;
@@ -29,14 +30,16 @@
             svg:hover {
                 transform: scale(1.2);
             }
-        }
 
-        .actions {
-            display: flex;
-            gap: 10px;
+            .actions {
+                display: flex;
+                justify-content: end;
+                gap: 10px;
+                width: 100%;
 
-            .save {
-                box-shadow: 2px 2px 2px 2px green;
+                .save {
+                    box-shadow: 2px 2px 2px 2px green;
+                }
             }
         }
     }
